--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<img src="images/profile_img.ico" alt="Aswin A S">
 			</figure>
 			<h1>Aswin A S</h1>
-                        <h2>Kerala 😋 |custom rom developer|KL-23 ❤️ </h2>
+                        <h2>Custom rom developer|KL-23 ❤️ </h2>
 			<h3>one of those cherry-pickers xD</h3>
 			<ul class="social">
 				<li><a href="https://github.com/aswin7469" target="_blank"><i class="icon-github"></i></a></li>
