update some info

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 			<figure>
 				<img src="images/profile_img.ico" alt="Aswin A S">
 			</figure>
-			<h1>aswin_a_s</h1>
-			<h2>a custom rom dev xD</h2>
+			<h1>Aswin A S</h1>
+                        <h2>Kerala 😋 |custom rom developer|KL-23 ❤️ </h2>
+			<h3>one of those cherry-pickers xD</h3>
 			<ul class="social">
 				<li><a href="https://github.com/aswin7469" target="_blank"><i class="icon-github"></i></a></li>
 				<li><a href="https://www.instagram.com/aswin_a_s__" target="_blank"><i class="icon-instagram"></i></a></li>
