--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			</figure>
 			<h1>Aswin A S</h1>
                         <h2>Custom rom developer|KL-23 ❤️ </h2>
-			<h3>one of those cherry-pickers xD</h3>
+			<h3>One of those cherry-pickers xD</h3>
 			<ul class="social">
 				<li><a href="https://github.com/aswin7469" target="_blank"><i class="icon-github"></i></a></li>
 				<li><a href="https://www.instagram.com/aswin_a_s__" target="_blank"><i class="icon-instagram"></i></a></li>
