update some info

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 				<img src="images/profile_img.ico" alt="Aswin A S">
 			</figure>
 			<h1>Aswin A S</h1>
-                        <h2>Custom rom developer|KL-23 ❤️ </h2>
-			<h3>One of those cherry-pickers xD</h3>
+                        <h2>Cherry picker , Build Bot , noob </h2>
 			<ul class="social">
 				<li><a href="https://github.com/aswin7469" target="_blank"><i class="icon-github"></i></a></li>
 				<li><a href="https://www.instagram.com/aswin_a_s__" target="_blank"><i class="icon-instagram"></i></a></li>
