--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/icomoon.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/snow.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="shortcut icon" href="images/favicon.ico">
+	<script src="js/jquery.js"></script>
+	<script src="js/snow-effect.js"></script>
+
 </head>
 <body>
 	<div id="particles-js">
@@ -31,6 +35,7 @@
 	</div>
 	<script src="js/particles.js"></script>
 	<script src="js/app.js"></script>
+        <script src="js/snow.js"></script>
 </body>
 </html>
 
