--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<li><a href="https://www.instagram.com/aswin_a_s__" target="_blank"><i class="icon-instagram"></i></a></li>
 				<li><a href="https://www.facebook.com/aswin.a.kurup" target="_blank"><i class="icon-facebook"></i></a></li>
 				<li><a href="https://forum.xda-developers.com/member.php?u=8499818" target="_blank">XDA</a></li>
+                                <li><a href="https://twitter.com/aswin_a_s__" target="_blank"><i class="icon-twitter"></i></a></li>
 			</ul>
 		</div>
 		<footer id="footer">
