--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Yourname Theme</title>
+    <title>Aswin A S</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Yourname</a>
+                <a class="navbar-brand" href="#page-top">Aswin A S</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -51,7 +51,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#portfolio">My Projects</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -70,9 +70,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Hey there! I am Yourname!</span>
+                        <span class="name">Hey there! I am Aswin A S !</span>
                         <hr class="star-light">
-                        <span class="skills">Add your skills here. Eg: <br/> Web Developer - Graphic Artist</span>
+                        <span class="skills">Custom Rom Developer</span>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>My Projects</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -164,10 +164,10 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Write a paragraph about who you are, where you're from, etc.</p>
+                    <p>A noob in this proffessional world</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Write a short paragraph about your hobbies and interests.</p>
+                    <p>Loves to derp stuffs , lazy &  Competitive sleeper </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <!-- <a href="#" class="btn btn-lg btn-outline">
@@ -186,12 +186,7 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>Your hostel address line 1
-                            <br>Your hostel address line 2</p>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>haha i am everywhere xD </h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -211,8 +206,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Yourname</h3>
-                        <p><a href="http://startbootstrap.com">Yourname</a>.</p>
+                        <h3>Aswin A S</h3>
+                        <p><a href="http://startbootstrap.com">aswin_a_s</a>.</p>
                     </div>
                 </div>
             </div>
@@ -221,7 +216,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; aswin_a_s 2019
                     </div>
                 </div>
             </div>
