cleanup index a bit

--- a/index.html
+++ b/index.html
@@ -189,25 +189,15 @@
                         <h3>haha i am everywhere xD </h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/aswin.a.kurup" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-google-plus"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-dribbble"></i></a>
+                                <a href="https://twitter.com/aswin_a_s__" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a>
                             </li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Aswin A S</h3>
-                        <p><a href="http://startbootstrap.com">aswin_a_s</a>.</p>
+                        <p><a href="https://github.com/aswin7469/aswin7469.github.io">hosted on github</a>.</p>
                     </div>
                 </div>
             </div>
@@ -216,7 +206,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; aswin_a_s 2019
+                        made with ❤️ by aswin_a_s
                     </div>
                 </div>
             </div>
