update colours & add instagram info

--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
                         <h3>haha i am everywhere xD </h3>
                         <ul class="list-inline">
                             <li>
+                                <a href="https://www.instagram.com/aswin_a_s__" class="btn-social btn-outline" target="_blank"><i class="fab fa-fw fa-instagram"></i></a
+                            </li>
+                            <li>
                                 <a href="https://www.facebook.com/aswin.a.kurup" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
