--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Hey there! I am Aswin A S !</span>
+                        <span class="name">Hey there,  I am Aswin A S </span>
                         <hr class="star-light">
-                        <span class="skills">Custom Rom Developer</span>
+                        <span class="skills">Custom Rom Developer | 18 </span>
                     </div>
                 </div>
             </div>
