add my projects

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cabin.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/bootleg.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -106,7 +106,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/cake.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/pixys.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -116,7 +116,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/circus.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/rr.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -126,17 +126,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/game.png" class="img-responsive" alt="">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/portfolio/safe.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/pie4zukku.png" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -146,7 +136,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/evo.png" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
@@ -236,21 +226,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Bootleggers Rom Official Pie</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/bootleg.png" class="img-responsive img-centered" alt="">
+                            <p> Bootleggers ROM is a AOSP based ROM with some extra patches anf features from other projects, like LineageOS, Dirty Unicorns, PixelExperience, OmniROM, and many more. Our goal is trying to add the best to make you feel like 家. With all those feature, we also have some extra apps, themes and wallpaper to try to give you a great experience since the first boot.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                <li>Downloads for zuk z2 plus:
+                                    <strong><a href="https://sourceforge.net/projects/bootleggersrom/files/builds/z2_plus/">sourceforge</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                <li>Last updated:
+                                    <strong><a href="https://t.me/zukscreenshots/589">13/06/2019</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Discussion:
+                                    <strong><a href="https://forum.xda-developers.com/lenovo-zuk-z2/development/pie-bootleggers-3-5-shishufied-zuk-z2-t3867112">XDA thread</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -273,21 +263,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>PixysOS Official Pie & Q</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cake.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/pixys.png" class="img-responsive img-centered" alt="">
+                            <p>Pixys is a butter smooth Android aftermarket firmware. We handpicked the best features around and are adding our own juice into it. Get ready to taste the unique features it brings with itself.We aim to deliver an experience with original ideas and features along with the useful things the community is accustomed to.</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                <li>Downloads:
+                                    <strong><a href="https://sourceforge.net/projects/pixys-os/files/pie/z2_plus/">android pie</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                <li>Last updated:
+                                    <strong><a href="https://t.me/zukscreenshots/740">28/08/2019</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Discussion:
+                                    <strong><a href="https://forum.xda-developers.com/lenovo-zuk-z2/development/rom-pixys-os-zuk-z2-plus-t3854189">XDA thread</a>
                                     </strong>
                                 </li>
                             </ul>
@@ -347,21 +337,21 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>RessurectionRemix OS Official pie for Redmi 4x</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/game.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <img src="img/portfolio/rr.png" class="img-responsive img-centered" alt="">
+                            <p>ResurrectionRemix OS has been based on LineageOS, SlimRoms, Omni and original Remix ROM builds, this creates an awesome combination of performance, customization, power and the most new features, brought directly to your Device.Many things that in previous versions were tweaked with mods, are now included by default in the ROM .Checkout<a href="https://www.resurrectionremix.com">our website</a>. for more info</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Yourname</a>
+                                <li>Downloads:
+                                    <strong><a href="https://archive.resurrectionremix.com/?dir=pie/santoni">Download for Redmi4X/santoni</a>
                                     </strong>
                                 </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                <li>Last Updated:
+                                    <strong><a href="https://t.me/r4xdownloads/1758">16/06/2019</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>Discussion:
+                                    <strong><a href="http://startbootstrap.comhttps://forum.xda-developers.com/xiaomi-redmi-4x/development/9-0-resurrection-remix-v7-0-t3892967">XDA thread</a>
                                     </strong>
                                 </li>
                             </ul>
