--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -120,7 +120,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -130,7 +130,7 @@
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
@@ -226,7 +226,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Bootleggers Rom Official Pie</h2>
+                            <h2>Bootleggers Rom Official Pie for zuk z2 plus [CLOSED]</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/bootleg.png" class="img-responsive img-centered" alt="">
                             <p> Bootleggers ROM is a AOSP based ROM with some extra patches anf features from other projects, like LineageOS, Dirty Unicorns, PixelExperience, OmniROM, and many more. Our goal is trying to add the best to make you feel like 家. With all those feature, we also have some extra apps, themes and wallpaper to try to give you a great experience since the first boot.</p>
@@ -263,16 +263,17 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>PixysOS Official Pie & Q</h2>
+                            <h2>PixysOS Official Pie & Q for zuk z2_plus</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/pixys.png" class="img-responsive img-centered" alt="">
                             <p>Pixys is a butter smooth Android aftermarket firmware. We handpicked the best features around and are adding our own juice into it. Get ready to taste the unique features it brings with itself.We aim to deliver an experience with original ideas and features along with the useful things the community is accustomed to.</p>
                             <ul class="list-inline item-details">
                                 <li>Downloads:
                                     <strong><a href="https://sourceforge.net/projects/pixys-os/files/pie/z2_plus/">android pie</a>
+                                    <strong><a href="https://sourceforge.net/projects/pixys-os/files/ten/">android q</a>
                                     </strong>
                                 </li>
-                                <li>Last updated:
+                                <li>Last updated(pie):
                                     <strong><a href="https://t.me/zukscreenshots/740">28/08/2019</a>
                                     </strong>
                                 </li>
@@ -337,7 +338,7 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>RessurectionRemix OS Official pie for Redmi 4x</h2>
+                            <h2>RessurectionRemix OS Official pie for Redmi 4x[CLOSED]</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/rr.png" class="img-responsive img-centered" alt="">
                             <p>ResurrectionRemix OS has been based on LineageOS, SlimRoms, Omni and original Remix ROM builds, this creates an awesome combination of performance, customization, power and the most new features, brought directly to your Device.Many things that in previous versions were tweaked with mods, are now included by default in the ROM .Checkout<a href="https://www.resurrectionremix.com">our website</a>. for more info</p>
