its christmas bois

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <!-- Theme CSS -->
     <link href="css/freelancer.min.css" rel="stylesheet">
 
+    <!-- Christmas event -->
+    <link rel="stylesheet" href="css/snow.css">
+
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -450,6 +453,10 @@
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
 
+    <!--christmas event-->
+    <script src="js/jquery.js"></script>
+    <script src="js/snow-effect.js"></script>
+    <script src="js/snow.js"></script>
 </body>
 
 </html>
