--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
+                            <p>Bootleggers</p>
                         </div>
                         <img src="img/portfolio/bootleg.png" class="img-responsive" alt="">
                     </a>
@@ -108,6 +109,7 @@
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
+                            <p>PixysOS</p>
                         </div>
                         <img src="img/portfolio/pixys.png" class="img-responsive" alt="">
                     </a>
@@ -118,6 +120,7 @@
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
+                            <p>ResurrectionRemix</p>
                         </div>
                         <img src="img/portfolio/rr.png" class="img-responsive" alt="">
                     </a>
@@ -128,6 +131,7 @@
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
+                            <p>pie4zukku</p>
                         </div>
                         <img src="img/portfolio/pie4zukku.png" class="img-responsive" alt="">
                     </a>
@@ -138,6 +142,7 @@
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
+                            <p>EvolutionX<p>
                         </div>
                         <img src="img/portfolio/evo.png" class="img-responsive" alt="">
                     </a>
