Redesigned Web Page with An overall Dark Theme
Appled an overall dark theme to the page, introduced gradient in projects section. Displayed projects as list. Minor design changes.

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-12 portfolio-item text-center">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -100,10 +100,11 @@
                             </div>
                             <p>Bootleggers</p>
                         </div>
-                        <img src="img/portfolio/bootleg.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/bootleg.png" class="img-responsive" alt="bootleggers">
+                        <p id="project-name">Bootleggers</p>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-12 portfolio-item text-center">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -111,10 +112,11 @@
                             </div>
                             <p>PixysOS</p>
                         </div>
-                        <img src="img/portfolio/pixys.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/pixys.png" class="img-responsive" alt="pixys-os">
+                        <p id="project-name">PixysOS</p>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-12 portfolio-item text-center">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -122,10 +124,11 @@
                             </div>
                             <p>ResurrectionRemix</p>
                         </div>
-                        <img src="img/portfolio/rr.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/rr.png" class="img-responsive" alt="ressurection-remix">
+                        <p id="project-name">RessurectionRemix</p>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-12 portfolio-item text-center">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -133,18 +136,21 @@
                             </div>
                             <p>pie4zukku</p>
                         </div>
-                        <img src="img/portfolio/pie4zukku.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/pie4zukku.png" class="img-responsive" alt="pie4zukku">
+                        <p id="project-name">Pie4Zukku</p>
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-12 portfolio-item text-center">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
-                            <p>EvolutionX<p>
+                            <p>EvolutionX
+                                <p>
                         </div>
-                        <img src="img/portfolio/evo.png" class="img-responsive" alt="">
+                        <img src="img/portfolio/evo.png" class="img-responsive" alt="evolution-x">
+                        <p id="project-name">EvolutionX</p>
                     </a>
                 </div>
             </div>
@@ -165,7 +171,7 @@
                     <p>A noob in this proffessional world</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Loves to derp stuffs , lazy &  Competitive sleeper </p>
+                    <p>Loves to derp stuffs , lazy & Competitive sleeper </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <!-- <a href="#" class="btn btn-lg btn-outline">
@@ -187,7 +193,7 @@
                         <h3>haha i am everywhere xD </h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.instagram.com/aswin_a_s__" class="btn-social btn-outline" target="_blank"><i class="fab fa-fw fa-instagram"></i></a
+                                <a href="https://www.instagram.com/aswin_a_s__" class="btn-social btn-outline" target="_blank"><i class="fa fa-fw fa-instagram"></i></a>
                             </li>
                             <li>
                                 <a href="https://www.facebook.com/aswin.a.kurup" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -237,7 +243,8 @@
                             <h2>Bootleggers Rom Official Pie for zuk z2 plus [CLOSED]</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/bootleg.png" class="img-responsive img-centered" alt="">
-                            <p> Bootleggers ROM is a AOSP based ROM with some extra patches anf features from other projects, like LineageOS, Dirty Unicorns, PixelExperience, OmniROM, and many more. Our goal is trying to add the best to make you feel like 家. With all those feature, we also have some extra apps, themes and wallpaper to try to give you a great experience since the first boot.</p>
+                            <p> Bootleggers ROM is a AOSP based ROM with some extra patches anf features from other projects, like LineageOS, Dirty Unicorns, PixelExperience, OmniROM, and many more. Our goal is trying to add the best to make you feel like
+                                家. With all those feature, we also have some extra apps, themes and wallpaper to try to give you a great experience since the first boot.</p>
                             <ul class="list-inline item-details">
                                 <li>Downloads for zuk z2 plus:
                                     <strong><a href="https://sourceforge.net/projects/bootleggersrom/files/builds/z2_plus/">sourceforge</a>
@@ -274,7 +281,8 @@
                             <h2>PixysOS Official Pie & Q for zuk z2_plus</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/pixys.png" class="img-responsive img-centered" alt="">
-                            <p>Pixys is a butter smooth Android aftermarket firmware. We handpicked the best features around and are adding our own juice into it. Get ready to taste the unique features it brings with itself.We aim to deliver an experience with original ideas and features along with the useful things the community is accustomed to.</p>
+                            <p>Pixys is a butter smooth Android aftermarket firmware. We handpicked the best features around and are adding our own juice into it. Get ready to taste the unique features it brings with itself.We aim to deliver an experience
+                                with original ideas and features along with the useful things the community is accustomed to.</p>
                             <ul class="list-inline item-details">
                                 <li>Downloads:
                                     <strong><a href="https://sourceforge.net/projects/pixys-os/files/pie/z2_plus/">android pie</a>
@@ -312,7 +320,8 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or
+                                you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Yourname</a>
@@ -349,7 +358,8 @@
                             <h2>RessurectionRemix OS Official pie for Redmi 4x[CLOSED]</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/rr.png" class="img-responsive img-centered" alt="">
-                            <p>ResurrectionRemix OS has been based on LineageOS, SlimRoms, Omni and original Remix ROM builds, this creates an awesome combination of performance, customization, power and the most new features, brought directly to your Device.Many things that in previous versions were tweaked with mods, are now included by default in the ROM .Checkout<a href="https://www.resurrectionremix.com">our website</a>. for more info</p>
+                            <p>ResurrectionRemix OS has been based on LineageOS, SlimRoms, Omni and original Remix ROM builds, this creates an awesome combination of performance, customization, power and the most new features, brought directly to your Device.Many
+                                things that in previous versions were tweaked with mods, are now included by default in the ROM .Checkout<a href="https://www.resurrectionremix.com">our website</a>. for more info</p>
                             <ul class="list-inline item-details">
                                 <li>Downloads:
                                     <strong><a href="https://archive.resurrectionremix.com/?dir=pie/santoni">Download for Redmi4X/santoni</a>
@@ -386,7 +396,8 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/safe.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or
+                                you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Yourname</a>
@@ -423,7 +434,8 @@
                             <h2>Project Title</h2>
                             <hr class="star-primary">
                             <img src="img/portfolio/submarine.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
+                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or
+                                you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Yourname</a>
